--- a/index.html
+++ b/index.html
@@ -1,9 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8" lang="us-eng">
 	<title>Website</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-<h1>Hello World</h1>
+	<header>
+		<nav class="navi">
+	<ul class="items">
+		<li><a href="#">Home</a></li>
+		<li><a href="#">about</a></li>
+		<li><a href="#">Contact</a></li>
+			
+		<li><a href="#">More</a></li>
+		<li><a href="#">Help</a></li>
+	</ul>
+
+</nav>
+
+	</header>
+
+</p>
 </body>
 </html>
