--- a/practice/index.html
+++ b/practice/index.html
@@ -62,7 +62,7 @@
 			<!--*****************PIC AT END***************--> 
 				<div class="pull-right visible-md visible-lg">
 					<div id="img-logo">
-						<a> <img src="/pics/logo.jpg" alt="XIOM ©" width="192" height="77.7"> </a>
+						<a> <img src="/https://drive.google.com/open?id=1vMWYGp82yogOi8QwYXrhT96hpqNs8_dS" alt="XIOM ©" width="192" height="77.7"> </a>
 						<span id="hidden">By XIOM ©</span>
 					</div>
 				</div>
